dataset1235/2025-2/1379599236/users/3204213742/executions/2110095464_1934415188.log
== SUBMISSION (2025-08-25 18:50:00)
-- CODE: 
gas = float(input())
dist = float(input())

consumo = gas/dist

print(round(consumo, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
2.0
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:51:05)
-- CODE: 
gas = float(input())
dist = float(input())

consumo =gas/dist

print(round(consumo, 3), "km/l")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
2.0 km/l
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
5.0 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:50:20)
-- CODE: 
gas = float(input())
dist = float(input())

consumo = gas/dist

print(round(consumo, 3)"km/l")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
File "XXXX", line 6
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
